[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "2.0.0", features = ["prove", "unstable"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
human-repr = "1.1.0"
csv = "1.3.1"
serde_with = "3.12.0"
clap = {version = "4.5.30", features = ["derive"] }
