[package]
name = "guest_bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.0", default-features = false, features = ['std', 'getrandom', 'unstable'] }
nalgebra = "0.33.2"
password-hash = "0.5.0"
argon2 = "0.5.3"
rsa = "=0.9.7"
rand = "0.8.5"
sha2 = "0.10.8"
hex-literal = "0.4.1"

[patch.crates-io]
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.7-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[profile.release]
opt-level = 3
