[package]
name = "guest_bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.0", default-features = false, features = ['std', 'getrandom', 'unstable'] }
nalgebra = "0.33.2"
password-hash = "0.5.0"
argon2 = "0.5.3"
rsa = {version = "0.9.7", features = ["serde"]}
rand = "0.8.5"
rand_core = {version = "0.6.4", features = []}
sha2 = "0.10.8"
hex-literal = "0.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
aes-gcm = "0.10.3"
p256 = {version = "0.13.2", features = ["ecdsa", "ecdh", "serde"]}
k256 = {version = "0.13.4", features = ["ecdsa"]}
png = {version = "0.17.4", features = []}

[patch.crates-io]
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.7-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[profile.release]
opt-level = 3
